authorization for post viewers. Viewers can only view his own posts now (except for admins)!

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,6 @@ project:
     publicUrls:
       - "/"
       - "/login"
+      - "/search/**"
     protectedUrls:
       - { urlPattern: "/users", authorities: ["VIEW_LIST"] }
